--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -533,35 +533,28 @@ textarea {
 
 // 토스트 팝업
 .toast-pop{
-	display:none;
-	position:fixed;
-	top:0;
-	left:0;
-	right:0;
-	bottom:0;
-	z-index:15;
 
-	&.center{
-		&::before{
-			display:block;
-			height:100%;
-			content:"";
-			background-color:rgba(0,0,0,.8);
-		}
-		.toast-container{
-			bottom:50%;
-		}
-		.module{
-			opacity:1;
-			background:rgba(64,83,94,.4);
-		}
+	// &.center{
+	// 	&::before{
+	// 		display:block;
+	// 		height:100%;
+	// 		content:"";
+	// 		background-color:rgba(0,0,0,.8);
+	// 	}
+	// 	.toast-container{
+	// 		bottom:50%;
+	// 	}
+	// 	.module{
+	// 		opacity:1;
+	// 		background:rgba(64,83,94,.4);
+	// 	}
 
-		&.active{
-			.toast-container{
-				transform:translate(0, 50%);
-			}
-		}
-	}
+	// 	&.active{
+	// 		.toast-container{
+	// 			transform:translate(0, 50%);
+	// 		}
+	// 	}
+	// }
 
 	&.active{
 		.toast-container{
@@ -585,16 +578,15 @@ textarea {
 		display:flex;
 		align-items:center;
 		min-height:48px;
-		padding:0 20px;
-		opacity:.4;
-		background:rgba(0,0,0,.8);
-		border-radius:10px;
+		padding:16px 20px;
+		background: rgba(0, 0, 0, 0.8);
+		border-radius:8px;
 	}
 	.message{
-		font-size:$font-sm2;
+		font-size:$font-md;
 		color:$gray-000;
 		font-weight:500;
-		line-height:20px;
+		line-height:24px;
 	}
 }
 
