고객 센터 -- 작업 중

--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -34,7 +34,7 @@ $icon-size: (
         "height": 48px
     ),
     "file": (
-		"search": "search.svg",
+		"search": "icon_search.svg",
         "sort": "sort.svg",
 		"star": "star.svg",
         "delete": "icon_delete.svg",
@@ -63,6 +63,7 @@ $icon-size: (
         "download-gray000": "icon_download_gray000.svg",
         "download-uncheck": "icon_download_uncheck.svg",
         "info": "icon_alert_circle.svg",
+        "info-dark": "icon_alert_circle_dark.svg",
         "file-export": "icon_file_export.svg",
         "text-delete": "icon_text_del.svg",
         "more": "icon_more.svg",
