--- a/src/scss/_customer.scss
+++ b/src/scss/_customer.scss
@@ -2,3 +2,203 @@
 
 // tmp
 @import "_libs/_customer01";
+
+.information {
+    position: relative;
+    z-index: 1;
+    .intro-text {
+        font-size: 20px;
+        font-weight: 500;
+        margin: 32px 0 8px;
+        span {
+            font-weight: 400;
+        }
+    }
+}
+
+.qna-list {
+    padding-top: 12px;
+    li {
+        padding: 12px 0;
+        a {
+            @include flex-center;
+            .text {
+                font-size: 16px;
+                font-weight: 500;
+            }
+            .btn {
+                margin-left: auto;
+            }
+        }
+    }
+}
+.qna-list-type2 {
+    margin-top: 16px;
+    li {
+        border: 1px solid $navy-020;
+        border-radius: $border-radius;
+        a {
+            padding: 16px;
+            @include flex-center;
+            .text {
+                font-size: 16px;
+                font-weight: 500;
+            }
+            .btn {
+                margin-left: auto;
+            }
+        }
+    }
+    li + li {
+        margin-top: 8px;
+    }
+}
+
+.join-withdraw {
+    .gc-tab-type02 {
+        margin: 24px 0;
+    }
+    .ip-group + .btn-group {
+        margin-top: 16px;
+    }
+}
+
+.quick-menu {
+    display: flex;
+    gap: 16px;
+    .item {
+        flex: 1;
+        height: 120px;
+        padding-top: 16px;
+        border: 1px solid $navy-020;
+        border-radius: $border-radius;
+        text-align: center;
+        .img {
+            img {
+                width: 56px;
+                height: 56px;
+            }
+        }
+        .text {
+            margin-top: 8px;
+            color: $navy-070;
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 18px;
+        }
+    }
+    &:last-child {
+        .text {
+            margin-top: 2px;
+        }
+    }
+}
+.gc-cs {
+    margin-bottom: 24px;
+    @include flex-center;
+    dt {
+        color: $navy-070;
+        font-size: 18px;
+        font-weight: 500;
+    }
+    dd {
+        color: $green-060;
+        font-size: 16px;
+        font-weight: 500;
+        margin-left: 16px;
+    }
+}
+.float-btn {
+    width: 60px;
+    height: 60px;
+    position: fixed;
+    right: 20px;
+    bottom: 140px;
+    border-radius: 50%;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+    background-color: $gray-000;
+    @include flex-center;
+    justify-content: center;
+    z-index: 20;
+    &::before {
+        content: "";
+        display: block;
+        background-image: url(#{$url-ico}icon_cs.svg);
+        width: 32px;
+        height: 32px;
+    }
+}
+
+.ip-textarea {
+    textarea {
+        width: 100%;
+        border: 1px solid $navy-020;
+        border-radius: $border-radius;
+        padding: 8px;
+        &::placeholder {
+            color: $navy-040;
+            font-size: 14px;
+        }
+    }
+}
+
+.search-wrap {
+    .row {
+        @include flex-center;
+        .ico + input[type="text"] {
+            margin-left: 8px;
+        }
+    }
+}
+
+// 테이블
+.tb-wrap {
+    &.type-2 {
+        th {
+            padding: 4px !important;
+            &.divide {
+                border-bottom: 1px solid $navy-020;
+            }
+        }
+        th,
+        td {
+            text-align: center;
+            vertical-align: middle;
+        }
+        tr {
+            td {
+                border-left: 0;
+                border-right: 0;
+            }
+        }
+        tbody {
+            &.align-mix {
+                td {
+                    &:nth-child(2) {
+                        text-align: left;
+                    }
+                }
+            }
+        }
+    }
+    &.type-3 {
+        th > em{
+            color: $red-060;
+        }
+        th,
+        td {
+            text-align: center;
+            vertical-align: middle;
+        }
+        tbody {
+            td {
+                border: 0;
+            }
+            tr {
+                &.divide {
+                    border-bottom: 1px solid $navy-020;
+                }
+            }
+        }
+    }
+}
