--- a/src/scss/_customer.scss
+++ b/src/scss/_customer.scss
@@ -14,6 +14,28 @@
             font-weight: 400;
         }
     }
+    section {
+        h3 {
+            color: $navy-070;
+            font-size: 20px;
+            font-weight: 500;
+            margin-bottom: 16px;
+        }
+        h4 {
+            color: $navy-070;
+            font-size: 16px;
+            font-weight: 500;
+            margin: 24px 0 16px;
+            @include flex-center;
+            .ico{
+                margin-right: 6px;
+            }
+        }
+        h4 + p{
+            color: $navy-040;
+            font-size: 14px;
+        }
+    }
 }
 
 .qna-list {
@@ -62,7 +84,27 @@
         margin-top: 16px;
     }
 }
-
+.use-product-info {
+    margin-top: 16px;
+    .item {
+        padding: 16px 0;
+        @include flex-center;
+        .img {
+        }
+        .text {
+            margin-left: 16px;
+            strong {
+                font-size: 16px;
+                font-weight: 500;
+            }
+            p {
+                margin-top: 8px;
+                color: $navy-040;
+                font-size: 14px;
+            }
+        }
+    }
+}
 .quick-menu {
     display: flex;
     gap: 16px;
@@ -150,7 +192,15 @@
         }
     }
 }
-
+.tip-wrap {
+    .badge {
+        margin-bottom: 8px;
+    }
+    p {
+        color: $navy-040;
+        font-size: 16px;
+    }
+}
 // 테이블
 .tb-wrap {
     &.type-2 {
@@ -182,7 +232,7 @@
         }
     }
     &.type-3 {
-        th > em{
+        th > em {
             color: $red-060;
         }
         th,
