--- a/src/scss/_reservation.scss
+++ b/src/scss/_reservation.scss
@@ -9,11 +9,17 @@
 
 // Common style
 
+.mt8 {
+    margin-top: 8px !important;
+}
 .mt24 {
     margin-top: 24px !important;
 }
 .mt32 {
     margin-top: 32px !important;
+}
+.mt40 {
+    margin-top: 40px !important;
 }
 .mt60 {
     margin-top: 60px !important;
