고객 센터 -- 작업 중

--- a/src/scss/_customer.scss
+++ b/src/scss/_customer.scss
@@ -40,9 +40,9 @@
         p + p {
             margin-top: 16px;
         }
-        li + li {
-            margin-top: 8px;
-        }
+        // li + li {
+        //     margin-top: 8px;
+        // }
         .text-green{
             color: $green-060;
         }
