--- a/src/components/icon.html
+++ b/src/components/icon.html
@@ -54,6 +54,14 @@
 				<div class="box a">
 					<ul>
 						<li>
+							<span class="icon" style="background-color:#000"><i class="ico plus-round lg"></i></span>
+							<span class="text">plus</span>
+						</li>
+						<li>
+							<span class="icon" style="background-color:#000"><i class="ico plus xs"></i></span>
+							<span class="text">plus</span>
+						</li>
+						<li>
 							<span class="icon" style="background-color:#000"><i class="ico download-gray000 lg"></i></span>
 							<span class="text">download</span>
 						</li>
@@ -70,7 +78,7 @@
 							<span class="text">ico-check</span>
 						</li>
 						<li>
-							<span class="icon"><i class="ico delete md"></i></span>
+							<span class="icon"><i class="ico delete lg"></i></span>
 							<span class="text">delete</span>
 						</li>
 						<li>
