--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -59,6 +59,7 @@ $icon-size: (
         "badge-f": "icon_badge_f.svg",
         "badge-g": "icon_badge_g.svg",
         "plus": "icon_plus.svg",
+        "plus-round": "icon_plus_round.svg",
         "download": "icon_download.svg",
         "download-gray000": "icon_download_gray000.svg",
         "download-uncheck": "icon_download_uncheck.svg",
