--- a/src/scss/_input.scss
+++ b/src/scss/_input.scss
@@ -39,6 +39,7 @@ $animation: all .2s ease;
 	
 	.ip-txt{
 		width:100%;
+		height:48px;
 		font-weight:500;
 		background:transparent;
 		outline:none;
