--- a/src/components/tab.html
+++ b/src/components/tab.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
+		<title>Tab</title>
         @@include('@@webRoot/include/head.html')
         <style>
             .contents {
