공통 셀렉트 추가

--- a/src/components/form.html
+++ b/src/components/form.html
@@ -90,15 +90,19 @@ h2{margin-bottom:20px;font-size:30px}
 						<input type="radio" name="tmpRadio02" id="tmpRadio04" disabled>
 						<span>Radio button disabled</span>
 					</label>
+
+					<br><br>
+					<div class="gc-select">
+						<select name="" id="">
+							<option>은행 선택</option>
+							<option>국민카드</option>
+						</select>
+					</div>
 				</div>
 				<!-- //Radio -->
                 
             </div>
         </section>
 	</div>
-	
-	<script type="text/javascript">
-
-	</script>
 </body>
 </html>
