카메라 아이콘

--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -77,6 +77,7 @@ $icon-size: (
         "pic-delete": "icon_pic_delete.svg",
         "check-green": "icon_check_on.svg",
         "check-second": "icon_second_check.svg",
+        "camera": "icon_camera.svg",
     )
     
 ) !default;
