--- a/src/scss/_libs/_reservation01.scss
+++ b/src/scss/_libs/_reservation01.scss
@@ -388,6 +388,7 @@
 				font-weight:500;
 			}
 			.desc-cp{
+				margin-top:9px;
 				font-size:$font-sm;
 				color:$navy-040;
 				line-height:24px;
