--- a/src/scss/_select.scss
+++ b/src/scss/_select.scss
@@ -2,8 +2,8 @@
 
 /* select */
 select {
-	height:40px;
-	padding:0 40px 0 15px;
+	height:24px;
+	padding:0 32px 0 0;
 	// border:1px solid red;
 	background-color:#fff;
 	background-repeat:no-repeat;
