--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -38,7 +38,9 @@ $icon-size: (
         "sort": "sort.svg",
 		"star": "star.svg",
         "delete": "icon_delete.svg",
+        "delete-black": "icon_delete_black.svg",
         "close": "icon_close.svg", 
+        "file-send": "icon_send.svg", 
         "home": "icon_home.svg",
         "back": "icon_back.svg",
         "next-sm": "icon_next_sm.svg",
@@ -78,6 +80,7 @@ $icon-size: (
         "check-green": "icon_check_on.svg",
         "check-second": "icon_second_check.svg",
         "camera": "icon_camera.svg",
+        "icon-tip-green060": "icon_tip_green060.svg",
     )
     
 ) !default;
