--- a/src/components/icon.html
+++ b/src/components/icon.html
@@ -54,6 +54,24 @@
 				<div class="box a">
 					<ul>
 						<li>
+							<span class="icon" style="background-color:#000">
+								<i class="ico file-send lg"></i>
+							</span>
+							<span class="text">file send</span>
+						</li>
+						<li>
+							<span class="icon" style="background-color:#000">
+								<i class="ico camera lg"></i>
+							</span>
+							<span class="text">camera</span>
+						</li>
+						<li>
+							<span class="icon">
+								<i class="ico icon-tip-green060 md"></i>
+							</span>
+							<span class="text">tip</span>
+						</li>
+						<li>
 							<span class="icon" style="background-color:#000"><i class="ico plus-round lg"></i></span>
 							<span class="text">plus</span>
 						</li>
@@ -79,6 +97,12 @@
 						</li>
 						<li>
 							<span class="icon"><i class="ico delete lg"></i></span>
+							<span class="text">delete</span>
+						</li>
+						<li>
+							<span class="icon">
+								<i class="ico delete-black lg"></i>
+							</span>
 							<span class="text">delete</span>
 						</li>
 						<li>
