--- a/src/scss/_text.scss
+++ b/src/scss/_text.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-// title default 18
+// title default 20
 .title{
 	font-size: $font-xl;
 	font-weight:500;
@@ -142,6 +142,70 @@
 				content: " ";
 				border-radius: 2rem;
 				background-color: #8c989e;
+			}
+		}
+	}
+}
+
+
+.list {
+    li {
+        font-size: 16px;
+        color: #8c989e;
+        position: relative;
+        padding-left: 16px;
+        &:before {
+            content: " ";
+            display: inline-block;
+            width: 4px;
+            height: 4px;
+            border-radius: 2rem;
+            background-color: #8c989e;
+            position: absolute;
+            top: 10px;
+            left: 0;
+        }
+    }
+    li + li {
+        margin-top: 8px;
+    }
+    &.xs {
+        li {
+            font-size: 12px;
+            padding-left: 12px;
+            &:before {
+                width: 3px;
+                height: 3px;
+                top: 8px;
+            }
+        }
+        li + li{
+            margin-top:4px;
+        }
+    }
+    &.sm {
+        li {
+            font-size: 14px;
+			line-height:20px;
+            padding-left: 12px;
+            &:before {
+                width: 3px;
+                height: 3px;
+                top: 9px;
+            }
+        }
+    }
+	&-number{
+		li{
+			position:relative;
+			margin-top:8px;
+			padding-left:16px;
+			text-indent:-14px;
+			font-size:$font-sm2;
+			line-height:20px;
+			color:$navy-040;
+			&:first-child{
+				margin-top:0;
 			}
 		}
 	}
