--- a/src/scss/_tab.scss
+++ b/src/scss/_tab.scss
@@ -67,10 +67,10 @@
 					position:relative;
 					justify-content: center;
 					align-items: center;
-					height: 56px;
+					height: 65px;
 					vertical-align: middle;
-					color: #8c989e;
-					font-size: 18px;
+					color:$navy-040;
+					font-size: $font-md;
 					font-weight: 500;
 					text-align:center;
 	
