--- a/src/scss/_text.scss
+++ b/src/scss/_text.scss
@@ -4,6 +4,7 @@
 .title{
 	font-size: $font-xl;
 	font-weight:500;
+	line-height:20px;
 
 	&-md{
 		font-size: $font-lg; //18
@@ -12,10 +13,12 @@
 	&-sm{
 		font-size:$font-md; //16
 		font-weight:500;
+		line-height:24px;
 	}
 	&-xs{
 		font-size:$font-sm; //12
 		font-weight:500;
+		line-height:16px;
 	}
 }
  
