--- a/src/scss/_customer.scss
+++ b/src/scss/_customer.scss
@@ -37,18 +37,12 @@
             color: $navy-040;
             font-size: 14px;
         }
-        // p + p {
-        //     margin-top: 16px;
-        // }
-        // li + li {
-        //     margin-top: 8px;
-        // }
-        .text-green {
-            color: $green-060 !important;
-        }
         em {
             font-weight: bold;
         }
+    }
+    .text-green {
+        color: $green-060 !important;
     }
     .ip-group {
         .ip-inner {
@@ -76,39 +70,86 @@
 }
 
 .qna-list {
-    padding-top: 12px;
-    li {
-        padding: 12px 0;
-        a {
-            @include flex-center;
-            .text {
-                font-size: 16px;
-                font-weight: 500;
-            }
-            .btn {
-                margin-left: auto;
+    &.type-1 {
+        padding-top: 12px;
+        li {
+            padding: 12px 0;
+            a {
+                @include flex-center;
+                .text {
+                    font-size: 16px;
+                    font-weight: 500;
+                }
+                .btn {
+                    margin-left: auto;
+                }
             }
         }
+    }
+    &.type-2 {
+        margin-top: 16px;
+        li {
+            border: 1px solid $navy-020;
+            border-radius: $border-radius;
+            a {
+                padding: 16px;
+                @include flex-center;
+                .text {
+                    font-size: 16px;
+                    font-weight: 500;
+                }
+                .btn {
+                    margin-left: auto;
+                }
+            }
+        }
+        li + li {
+            margin-top: 8px;
+        }
+    }
+    &.type-3 {
+        li {
+            a {
+                padding: 16px 0;
+                @include flex-center;
+                .text {
+                    width: calc(100% - 48px);
+                    font-size: 16px;
+                    font-weight: 500;
+                }
+                .btn {
+                    margin-left: auto;
+                }
+            }
+            &:first-child {
+                a {
+                    padding-top: 0;
+                }
+            }
+        }
+        li + li {
+            border-top: 1px solid $navy-020;
+        }
+        &.narrow{
+            li{
+                a{
+                    padding: 8px 0;
+                }
+            }
+        }
+    }
+    .qna-list-head {
+        font-size: 16px;
+        font-weight: 500;
+        margin-bottom: 24px;
     }
 }
-.qna-list-type2 {
-    margin-top: 16px;
-    li {
-        border: 1px solid $navy-020;
-        border-radius: $border-radius;
-        a {
-            padding: 16px;
-            @include flex-center;
-            .text {
-                font-size: 16px;
-                font-weight: 500;
-            }
-            .btn {
-                margin-left: auto;
-            }
-        }
+
+.qna-detail{
+    p + p, li + li{
+        margin-top: 16px;
     }
-    li + li {
+    ol + p{
         margin-top: 8px;
     }
 }
@@ -237,6 +278,14 @@
         margin-top: 16px;
     }
 }
+.agree-group {
+    .gc-radio {
+        span {
+            font-size: 20px;
+            font-weight: 500 !important;
+        }
+    }
+}
 .gc-cs {
     margin-bottom: 24px;
     @include flex-center;
@@ -291,6 +340,9 @@
         @include flex-center;
         .ico + input[type="text"] {
             margin-left: 8px;
+        }
+        input[type="text"] {
+            font-size: 18px;
         }
     }
 }
