--- a/src/scss/_libs/_status01.scss
+++ b/src/scss/_libs/_status01.scss
@@ -9,6 +9,7 @@
 	.status-step{
 		margin-top:32px;
 		.flex{
+			position:relative;
 			text-align:center;
 			&::before{
 				display:block;
@@ -18,6 +19,17 @@
 				content:"";
 				background-repeat:no-repeat;
 				background-size:100% 100%;
+			}
+			&:not(&:nth-child(1))::after{
+				display:inline-block;
+				position:absolute;
+				top:20px;
+				left:0;
+				width:20px;
+				height:4px;
+				content:"";
+				background-color:$navy-020;
+				transform:translate(-50%,0);
 			}
 			@for $i from 1 through 4 {
 				&.step0#{$i}::before{
@@ -363,7 +375,6 @@
 		.flex{
 			position:relative;
 			width:50%;
-			// flex:0 0 auto;
 			flex-basis:50%;
 			padding-left:10px;
 			&:nth-child(odd){
@@ -372,6 +383,9 @@
 				.btn-del{
 					left:0px;
 				}
+			}
+			&:not(&:nth-child(1),&:nth-child(2)){
+				margin-top:20px;
 			}
 			.btn-del{
 				position:absolute;
@@ -394,28 +408,6 @@
 .under{
 	display:inline-block;
 	border-bottom:1px solid $navy-070;
-}
-.photo-add{
-	display:flex;
-	align-items:center;
-	width:100%;
-	height:100%;
-	text-align:center;
-	background:$navy-060;
-	.module{
-		flex:1;
-	}
-	.label{
-		font-size:$font-sm2;
-		color:$gray-000;
-	}
-	.desc-xs{
-		color:$navy-040;
-	}
-
-	input[type="file"]{
-		appearance:none;
-	}
 }
 
 .layer-wrap{
@@ -441,9 +433,9 @@
 			}
 		}
 		.txt-module{
-			margin-top:24px;
+			margin-top:16px;
 			.desc{
-				margin-top:8px;
+				margin-top:4px;
 				color:$navy-040;
 			}
 		}
