--- a/src/components/input.html
+++ b/src/components/input.html
@@ -54,7 +54,7 @@
 									<label for="ip01" class="ip-label">추천인 아이디</label>
 									<input id="ip01" type="text" class="ip-txt" placeholder="추천인 아이디 입력">
 									<button type="button" class="icon-group btn-del">
-										<i class="ico delete md"></i>
+										<i class="ico delete lg"></i>
 									</button>
 									<div class="line"></div>
 								</div>
@@ -68,7 +68,7 @@
 									<div class="line"></div>
 									<span class="icon-group">
 										<button type="button" class="ip-icon">
-											<i class="ico delete md"></i>
+											<i class="ico delete lg"></i>
 										</button>
 										<button id="toggler" type="button" class="ip-icon">
 											<i class="ico eye-on md"></i>
@@ -76,6 +76,20 @@
 									</span>
 								</div>
 								<p class="error-txt">비밀번호가 일치하지 않습니다</p>
+							</div>
+
+							<div class="ip-group certi">
+								<div class="row">
+									<input type="number" class="ip-txt">
+									<div class="line"></div>
+									<span class="icon-group">
+										<button type="button" class="btn-del">
+											<i class="ico delete lg"></i>
+										</button>
+										<span class="time">3:00</span>
+									</span>
+								</div>
+								<p class="error-txt">인증코드가 일치하지 않습니다</p>
 							</div>
 						</div>
 
@@ -112,7 +126,7 @@
 								<div class="row">
 									<input type="text" class="ip-txt" placeholder="이름">
 									<button type="button" class="icon-group btn-del">
-										<i class="ico delete md"></i>
+										<i class="ico delete lg"></i>
 									</button>
 									<div class="line"></div>
 								</div>
