--- a/src/scss/_libs/_status01.scss
+++ b/src/scss/_libs/_status01.scss
@@ -79,13 +79,16 @@
 			.car{
 				font-size:$font-md;
 				font-weight:500;
+				line-height:24px;
 			}
 			.number{
+				margin-top:4px;
 				font-size:$font-md;
+				line-height:24px;
 			}
 			.subway{
 				height:20px;
-				margin-top:3px;
+				margin-top:4px;
 				font-size:$font-sm2;
 				.badge-g{
 					width:20px;
@@ -95,16 +98,19 @@
 				}
 			}
 			.date,.receipt{
+				margin-top:4px;
 				font-size:$font-sm;
 				color:$navy-040;
+				line-height:16px;
 				&:not(.receipt){
-					margin-top:14px;
+					margin-top:10px;
 				}
 			}
 			.desc{
-				margin-top:22px;
+				margin-top:16px;
 				font-weight:500;
 				text-align:center;
+				line-height:20px;
 				.point{
 					color:$default;
 				}
@@ -116,7 +122,7 @@
 	//사고정보
 	.accident-infomation{
 		.grid-flex{
-			padding:17px 0;
+			padding:20px 0;
 			border-bottom:1px solid $navy-020;
 		}
 		.flex{
@@ -155,7 +161,7 @@
 	.accident-photo{
 		margin-top:24px;
 		.swiper-module{
-			margin:24px -20px 0 0;
+			margin:16px -20px 0 0;
 			padding-right:20px;
 			overflow:hidden;
 		}
@@ -165,7 +171,7 @@
 	}
 
 	.accident-step{
-		padding:44px 0 4px;
+		padding:37px 0 4px;
 		.line {
 			position:relative;
 			height:4px;
@@ -405,10 +411,10 @@
 	}
 }
 
-.under{
-	display:inline-block;
-	border-bottom:1px solid $navy-070;
-}
+// .under{
+// 	display:inline-block;
+// 	border-bottom:1px solid $navy-070;
+// }
 
 .layer-wrap{
 	&.status{
@@ -433,7 +439,10 @@
 			}
 		}
 		.txt-module{
-			margin-top:16px;
+			margin-top:24px;
+			.title-sm{
+				margin-top:16px;
+			}
 			.desc{
 				margin-top:4px;
 				color:$navy-040;
