--- a/src/scss/_customer.scss
+++ b/src/scss/_customer.scss
@@ -154,6 +154,12 @@
     }
 }
 
+.btn-more-view{
+    .text{
+        color: $navy-040;
+    }
+}
+
 .join-withdraw {
     .gc-tab-type02 {
         margin: 24px 0;
@@ -332,9 +338,46 @@
             color: $navy-040;
             font-size: 14px;
         }
+        &:focus{
+            outline: none;
+        }
     }
 }
 
+.gc-select{
+    &.full{
+        select{
+            width: 100%;
+            font-size: 16px;
+            &:focus{
+                outline: none
+            }
+            background-image:url(''+$url-ico+'icon_list_open_arrow.svg');
+        }
+        &::after{
+            content: " ";
+            display: block;
+            width: 100%;
+            height: 1px;
+            background-color: $navy-020;
+            margin-top: 16px;
+        }
+       
+    }
+}
+
+.terms{
+    .item{
+        @include flex-center;
+        .text{
+            font-size: 16px;
+            font-weight: 500;
+        }
+        .ico{
+            margin-left: auto;
+        }
+    }
+}
 .search-wrap {
     .row {
         @include flex-center;
