내정보 추가 작업

--- a/src/components/icon.html
+++ b/src/components/icon.html
@@ -66,6 +66,12 @@
 							<span class="text">camera</span>
 						</li>
 						<li>
+							<span class="icon" style="background-color:#000">
+								<i class="ico camera02 lg"></i>
+							</span>
+							<span class="text">camera02</span>
+						</li>
+						<li>
 							<span class="icon">
 								<i class="ico icon-tip-green060 md"></i>
 							</span>
