--- a/src/components/input.html
+++ b/src/components/input.html
@@ -91,6 +91,22 @@
 								</div>
 								<p class="error-txt">인증코드가 일치하지 않습니다</p>
 							</div>
+
+							<div class="ip-group card">
+								<div class="row">
+									<label for="card" class="ip-label">카드번호 입력</label>
+									<div class="ip-card-module">
+										<input id="card" type="text" class="ip-txt" data-pos="1" placeholder="1234" value="1234" maxlength="4">
+										<input type="text" class="ip-txt" data-pos="2" placeholder="0000" maxlength="4">
+										<input type="text" class="ip-txt" data-pos="3" placeholder="0000" maxlength="4">
+										<input type="text" class="ip-txt" data-pos="4" placeholder="0000" maxlength="4">
+										<div class="line"></div>
+										<button type="button" class="icon-group btn-del">
+											<i class="ico delete md"></i>
+										</button>
+									</div>
+								</div>
+							</div>
 						</div>
 
 						<br>
