--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -54,7 +54,7 @@ $icon-size: (
         "arrow-bot-nav060": "icon_arrow_bot_navy060.svg",
         "arrow-left": "arrow-left.svg",
         "arrow-bot": "icon_arrow_bot.svg",
-        "eye-on": "icon_eye_on.svg",
+        "eye-on": "icon_eye_off.svg",
         "eye-off": "icon_eye_off.svg",
         "bookmark": "icon_bookmark.svg",
         "bookmark-active": "bookmark_active.svg",
@@ -80,6 +80,7 @@ $icon-size: (
         "check-green": "icon_check_on.svg",
         "check-second": "icon_second_check.svg",
         "camera": "icon_camera.svg",
+        "camera02": "icon_camera02.svg",
         "icon-tip-green060": "icon_tip_green060.svg",
     )
     
