--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -174,6 +174,13 @@ $btn-size: (
 				display:inline-flex;
 			}
 		}
+
+		&.center{
+			justify-content:center;
+			.btn{
+				flex:0 0 auto;
+			}
+		}
     }
     &-left {
         justify-content:flex-start;
