--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -170,10 +170,10 @@ input,
 select,
 textarea {
     color:$navy-070;
-    font-size: 14px;
     font-weight: 400;
     font-family: 'Noto Sans KR', sans-serif;
     letter-spacing: -.5px;
+    @include fontSize(14);
 }
 
 /* wrap */
