--- a/src/scss/_input.scss
+++ b/src/scss/_input.scss
@@ -61,7 +61,13 @@ $animation: all .2s ease;
 		right:0;
 
 		.ip-icon{
+			display:inline-flex;
 			margin-left:10px;
+			&.active{
+				.eye-on{
+					background:url(#{$url-ico}icon_eye_on.svg);
+				}
+			}
 		}		
 	}
 
@@ -70,7 +76,7 @@ $animation: all .2s ease;
 			margin-right:8px;
 		}
 		.time{
-			height:24px;
+			height:24px; 
 			line-height:24px;
 			font-size:$font-lg;
 			color:$navy-020;
@@ -89,6 +95,30 @@ $animation: all .2s ease;
 			font-size: $font-sm;
 			color: $validation-error;
 			line-height:17px;
+		}
+	}
+
+	.expiration{
+		display:flex;
+		.ip-txt{
+			padding:0;
+			overflow:visible;
+			text-overflow:unset;
+			@include fontSize(18);
+			&:last-child{
+				padding-left:5px;
+			}
+			&:first-child{
+				flex:0 0 auto;
+				width:25px;
+			}
+		}
+		.txt{
+			display:inline-flex;
+			align-items:center;
+			padding:0 5px;
+			@include fontSize(18);
+			color:$navy-020;
 		}
 	}
 }
