--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -68,6 +68,9 @@
             &.#{$key}{
                 height: map-get($value, "size");
                 font-size: map-get($value, "font-size");
+				@if($key == "xs"){
+					border-radius:17px;
+				}
             }
         }
     }
@@ -336,3 +339,39 @@
 @mixin bdt(){
 	border-top:1px solid $navy-020;
 }
+
+
+@mixin icType(){
+    @each $key, $value in $icon-size {
+        &.#{$key}{
+            width: map-get($value, "width");
+            height: map-get($value, "height");
+        }
+    }
+
+    @each $key, $file in map-get($icon-size, "file") {
+        &.#{$key} {
+            background-image: url($url-ico+$file);
+        }
+    }
+}
+
+// font-style-guide
+@mixin fontSize($size){
+	font-size:#{$size}px;
+	@if($size == 10){
+		line-height:12px;
+	} @else if($size == 12){
+		line-height:16px;
+	} @else if($size == 14){
+		line-height:20px;
+	} @else if($size == 16){
+		line-height:24px;
+	} @else if($size == 18){
+		line-height:24px;
+	} @else if($size == 20){
+		line-height:24px;
+	}
+}
+
+
