--- a/src/scss/_input.scss
+++ b/src/scss/_input.scss
@@ -33,13 +33,18 @@ $animation: all .2s ease;
 	}
 
 	.row{
+		display:flex;
+		flex-wrap:wrap;
+		align-items:center;
 		position:relative;
 		z-index: 5;
 	}
 	
 	.ip-txt{
+		flex:1 1 50%;
 		width:100%;
 		height:48px;
+		padding:0;
 		font-weight:500;
 		background:transparent;
 		outline:none;
@@ -49,6 +54,7 @@ $animation: all .2s ease;
 
 	.ip-label{
 		display:inline-block;
+		width:100%;
 		font-size: $font-sm;
 		font-weight:500;
 		line-height:1;
@@ -56,9 +62,9 @@ $animation: all .2s ease;
 
 	.icon-group{
 		display:flex;
-		position:absolute;
-		bottom:10px;
-		right:0;
+		// position:absolute;
+		// bottom:10px;
+		// right:0;
 
 		.ip-icon{
 			display:inline-flex;
